--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
     "@remix-run/node": "^1.7.0",
     "@remix-run/react": "^1.7.0",
     "@remix-run/serve": "^1.7.0",
+    "@types/axios": "^0.14.0",
+    "axios": "^0.27.2",
     "lodash": "^4.17.21",
     "moment": "^2.29.4",
     "react": "^18.2.0",
